--- a/06.Jacascript Basics/Objects/index.html
+++ b/06.Jacascript Basics/Objects/index.html
@@ -13,6 +13,8 @@
 <body>
     <p>Hi!</p>
     <p>Open the console.</p>
+
+    <script src="users.js"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
