--- a/11.Blandade uppgifter/memory-game-exercise/index.html
+++ b/11.Blandade uppgifter/memory-game-exercise/index.html
@@ -9,68 +9,68 @@
 <body>
     <section class="memory-cards">
         <article class="memory-card" data-card="1">
-            <span class="front">1</span>
-            <span class="back">Memory</span>
+            <span class="front">Klingon</span>
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="1">
-            <span class="front">1</span>
-            <span class="back">Memory</span>
+            <img class="front" src="img/180px-Civil_War_Worf_Head.png">
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="2">
-            <span class="front">2</span>
-            <span class="back">Memory</span>
+            <span class="front">Borg</span>
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="2">
-            <span class="front">2</span>
-            <span class="back">Memory</span>
+            <img class="front" src="img/180px-Drone_Seven_of_Nine_Head.png">
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="3">
-            <span class="front">3</span>
-            <span class="back">Memory</span>
+            <span class="front">Vulcan</span>
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="3">
-            <span class="front">3</span>
-            <span class="back">Memory</span>
+            <img class="front" src="img/180px-Commander_Spock_Head.png">
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="4">
-            <span class="front">4</span>
-            <span class="back">Memory</span>
+            <span class="front">Cardassian</span>
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="4">
-            <span class="front">4</span>
-            <span class="back">Memory</span>
+            <img class="front" src="img/180px-Tailor_Garak_Head.png">
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="5">
-            <span class="front">5</span>
-            <span class="back">Memory</span>
+            <span class="front">Ferengi</span>
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="5">
-            <span class="front">5</span>
-            <span class="back">Memory</span>
+            <img class="front" src="img/180px-Convergence_Day_Quark_Head.png">
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="6">
-            <span class="front">6</span>
-            <span class="back">Memory</span>
+            <span class="front">Romulan</span>
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="6">
-            <span class="front">6</span>
-            <span class="back">Memory</span>
+            <img class="front" src="img/180px-Senator_Cretak_Head.png">
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="7">
-            <span class="front">7</span>
-            <span class="back">Memory</span>
+            <span class="front">The Q</span>
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="7">
-            <span class="front">7</span>
-            <span class="back">Memory</span>
+            <img class="front" src="img/180px-Judge_Q_Head.png">
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="8">
-            <span class="front">8</span>
-            <span class="back">Memory</span>
+            <span class="front">Bajoran</span>
+            <span class="back"></span>
         </article>
         <article class="memory-card" data-card="8">
-            <span class="front">8</span>
-            <span class="back">Memory</span>
+            <img class="front" src="img/180px-Kai_Opaka_Head.png">
+            <span class="back"></span>
         </article>
     </section>
 
