--- a/11.Blandade uppgifter/memory-game-exercise/index.html
+++ b/11.Blandade uppgifter/memory-game-exercise/index.html
@@ -10,67 +10,91 @@
     <section class="memory-cards">
         <article class="memory-card" data-card="1">
             <span class="front">Klingon</span>
-            <span class="back"></span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="1">
-            <img class="front" src="img/180px-Civil_War_Worf_Head.png">
-            <span class="back"></span>
+            <span class="front">
+                Worf, Klingon
+                <img  src="img/180px-Civil_War_Worf_Head.png">
+            </span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="2">
             <span class="front">Borg</span>
-            <span class="back"></span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="2">
-            <img class="front" src="img/180px-Drone_Seven_of_Nine_Head.png">
-            <span class="back"></span>
+            <span class="front">
+                Seven of Nine, Borg
+                <img src="img/180px-Drone_Seven_of_Nine_Head.png">
+            </span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="3">
             <span class="front">Vulcan</span>
-            <span class="back"></span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="3">
-            <img class="front" src="img/180px-Commander_Spock_Head.png">
-            <span class="back"></span>
+            <span class="front">
+                Spock, Vulcan
+                <img src="img/180px-Commander_Spock_Head.png">
+            </span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="4">
             <span class="front">Cardassian</span>
-            <span class="back"></span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="4">
-            <img class="front" src="img/180px-Tailor_Garak_Head.png">
-            <span class="back"></span>
+            <span class="front">
+                Garak, Cardassian
+                <img src="img/180px-Tailor_Garak_Head.png">
+            </span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="5">
             <span class="front">Ferengi</span>
-            <span class="back"></span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="5">
-            <img class="front" src="img/180px-Convergence_Day_Quark_Head.png">
-            <span class="back"></span>
+            <span class="front">
+                Quark, Ferengi
+                <img src="img/180px-Convergence_Day_Quark_Head.png">
+            </span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="6">
             <span class="front">Romulan</span>
-            <span class="back"></span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="6">
-            <img class="front" src="img/180px-Senator_Cretak_Head.png">
-            <span class="back"></span>
+            <span class="front">
+                Senator Cretak, Romulan
+                <img src="img/180px-Senator_Cretak_Head.png">
+            </span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="7">
             <span class="front">The Q</span>
-            <span class="back"></span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="7">
-            <img class="front" src="img/180px-Judge_Q_Head.png">
-            <span class="back"></span>
+            <span class="front">
+                The Q, Q
+                <img src="img/180px-Judge_Q_Head.png">
+            </span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="8">
             <span class="front">Bajoran</span>
-            <span class="back"></span>
+            <span class="back"> </span>
         </article>
         <article class="memory-card" data-card="8">
-            <img class="front" src="img/180px-Kai_Opaka_Head.png">
-            <span class="back"></span>
+            <span class="front">
+                Kai Opaka, Bajoran
+                <img src="img/180px-Kai_Opaka_Head.png">
+            </span>
+            <span class="back"> </span>
         </article>
     </section>
 
@@ -78,7 +102,8 @@
         <a href="#" class="close">X</a>
         <h1>You won!</h1>
     </section>
-
     <script src="js/index.js"></script>
 </body>
 </html>
+
+<!-- Pictures found at https://sttwiki.org/wiki/Main_Page -->
