--- a/13.APIs/musicplayer/index.html
+++ b/13.APIs/musicplayer/index.html
@@ -7,8 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Musikspelare!</h1>
 
-    <!--content-->
+    <section>
+        <input type="text" id="query" placeholder="Sök låt">
+        <button id="search-button">Sök</button>
+    </section>
+
+    <ul id="track-list"></ul>
+
+    <audio controls></audio>
     
     <script src="script.js"></script>
 </body>
