--- a/13.APIs/LewisCarroll/index.html
+++ b/13.APIs/LewisCarroll/index.html
@@ -17,6 +17,6 @@
     </section>
     <!--content-->
     
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
