--- a/13.APIs/flickr/index.html
+++ b/13.APIs/flickr/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="text" placeholder="search" id="searchField">
 
-    <!--content-->
+    <section id="photos">
+    </section>
     
     <script src="script.js"></script>
 </body>
