--- a/13.APIs/flickr/index.html
+++ b/13.APIs/flickr/index.html
@@ -9,7 +9,12 @@
 <body>
     <input type="text" placeholder="search" id="searchField">
 
-    <section id="photos">
+    <section id="thumbnailContaier"> </section>
+
+    <section id="lightbox">
+        <section id="lightbox-photos"> </section>
+
+        <p id="lightbox-caption"> </p>
     </section>
     
     <script src="script.js"></script>
