prepare for simple cryptation

--- a/15.JSmixTwo/cryptedCommunication/index.html
+++ b/15.JSmixTwo/cryptedCommunication/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-    <!--content-->
+    
     
     <script src="script.js"></script>
+    <script type="module" src="./key.js"></script>
 </body>
 </html>
