Created the form

--- a/15.JSmixTwo/cryptedCommunication/index.html
+++ b/15.JSmixTwo/cryptedCommunication/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
 
-    
-    
-    <script src="script.js"></script>
-    <script type="module" src="./key.js"></script>
+    <form>
+        <input type="text" id="messageInput">
+        <p id="messageDisplay">Well, what are you waiting for? Write someting!</p>
+        <button id="encrypt">Encrypt message</button>
+        <button id="decrypt">Decrypt message</button>
+    </form>
+
+    <script type="module" src="script.js"></script>
+    <script type="module" src="key.js"></script>
 </body>
 </html>
