--- a/15.JSmixTwo/cryptedCommunication/index.html
+++ b/15.JSmixTwo/cryptedCommunication/index.html
@@ -11,8 +11,8 @@
     <form>
         <input type="text" id="messageInput">
         <p id="messageDisplay">Well, what are you waiting for? Write someting!</p>
-        <button id="encrypt">Encrypt message</button>
-        <button id="decrypt">Decrypt message</button>
+        <button id="encrypt" type="button">Encrypt message</button>
+        <button id="decrypt" type="button">Decrypt message</button>
     </form>
 
     <script type="module" src="script.js"></script>
